@@ -1,4 +1,9 @@
-Sun Jun 30 10:59:00 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Sun Jun 30 10:59:04 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* win32/win32.c (w32_spawn): extract codepage aware code from
+	  rb_w32_spawn().
+
+	* win32/win32.c (rb_w32_uspawn): add UTF-8 version function.
 
 	* win32/win32.c (w32_aspawn_flags): extract codepage aware code from
 	  rb_w32_aspawn_flags().
